# photometric_stereo

./: .gitignore  Makefile  README.md  calibrar_luces.sh  obtener_planos_distintas_luces.sh  obtener_planos_tiempos.sh
doc/: .gitignore  Makefile  NOTAS.md  caratula.sty  informe.bib  informe.tex
doc/notebooks/: Calibracion.ipynb  M banda copada (2Nx2N).ipynb  Visualizacion_Matriz_M_banda.ipynb
doc/plot/: sample.tex
experimentacion/calibracion/: luces_nuestras_cromada_1.txt  luces_nuestras_cromada_10.txt  luces_nuestras_cromada_100.txt  luces_nuestras_cromada_15.txt  luces_nuestras_cromada_20.txt  luces_nuestras_cromada_30.txt  luces_nuestras_cromada_5.txt  luces_nuestras_cromada_50.txt  luces_nuestras_mate_1.txt  luces_nuestras_mate_10.txt  luces_nuestras_mate_100.txt  luces_nuestras_mate_15.txt  luces_nuestras_mate_20.txt  luces_nuestras_mate_30.txt  luces_nuestras_mate_5.txt  luces_nuestras_mate_50.txt  numero_de_condicion.ipynb
experimentacion/tiemposObtenerPlanoNormal/: eg_100.txt  eg_1000.txt  eg_150.txt  eg_200.txt  eg_250.txt  eg_300.txt  eg_350.txt  eg_400.txt  eg_450.txt  eg_500.txt  eg_550.txt  eg_600.txt  eg_650.txt  eg_700.txt  eg_750.txt  eg_800.txt  eg_850.txt  (+22 more)
plot/: Makefile  colors.gpi  plots.gpi
script/: build_M_matrix.m  build_M_matrix2.m  build_M_matrix3.m  filtrar_z.m  plot_depth  plot_heatmap  plot_normals
src/: 3dbuild.cpp  CMakeLists.txt  algoritmosmatriciales.h  band_matrix.h  calibrate.cpp  common.cpp  common.h  dok_matrix.h  image.cpp  image.h  input-eg  input-eg2  matrix.h  ppmloader.cpp  ppmloader.h  sunflower.ppm  tests.cpp
(+19 files in other folders)
